Updates from Overleaf

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,131 +1,309 @@
-@article{bonusEvaluationFluidDrivenDebris,
-  title = {Evaluation of {{Fluid-Driven Debris Impacts}} in a {{High-Performance Multi-GPU Material Point Method}}},
-  author = {Bonus, Justin},
-  langid = {english},
-  file = {C:\Users\noeko\Zotero\storage\FJ6HYFG9\Bonus - Evaluation of Fluid-Driven Debris Impacts in a High-Performance Multi-GPU Material Point Method.pdf}
-}
-
-@inproceedings{bonusMultiScaleNumericalSimulation2022,
-  title = {Multi-{{Scale Numerical Simulation}} of {{Tsunami-Driven Debris-Field Impacts}}},
-  booktitle = {Ports 2022},
-  author = {Bonus, Justin and Arduino, Pedro and Motley, Michael and Eberhard, Marc},
-  year = {2022},
-  month = sep,
-  pages = {328--339},
-  publisher = {American Society of Civil Engineers},
-  address = {Honolulu, Hawaii},
-  doi = {10.1061/9780784484395.033},
-  urldate = {2025-01-31},
-  abstract = {In current practice, debris-field impact loading for near-water structures is usually derived from (1) infrequent case histories, (2) simplified analytical equations, and (3) practitioner experience. Via advanced numerical simulation of tsunami-driven debris-field impacts at multiple scales and conditions, we are now forging a modeling approach to address a wider range of scenarios. Broadened cases are characterized, with chaotic natures expressed stochastically. The analytical tools have the potential to strengthen the basis of ASCE 7 guidelines and to encompass events not yet described in the code.},
-  isbn = {978-0-7844-8439-5},
-  langid = {english},
-  file = {C:\Users\noeko\Zotero\storage\CNI4C3CE\Bonus et al. - 2022 - Multi-Scale Numerical Simulation of Tsunami-Driven Debris-Field Impacts.pdf}
-}
-
-@article{chockDesignTsunamiLoads2016,
-  title = {Design for {{Tsunami Loads}} and {{Effects}} in the {{ASCE}} 7-16 {{Standard}}},
-  author = {Chock, Gary Y. K.},
-  year = {2016},
-  month = nov,
-  journal = {Journal of Structural Engineering},
-  volume = {142},
-  number = {11},
-  pages = {04016093},
-  issn = {0733-9445, 1943-541X},
-  doi = {10.1061/(ASCE)ST.1943-541X.0001565},
-  urldate = {2025-02-06},
-  abstract = {A tsunami is a series of great waves primarily caused by a major subduction-zone earthquake with large-scale displacement of the sea floor or by initiation of submarine landslides. Many coastal areas in the western United States are subject to tsunami hazard that is infrequent but potentially extremely destructive. The public safety risk has been only partially mitigated through warning and preparedness of evacuation; there are many coastal communities in the states of Alaska, Washington, Oregon, California, and Hawaii where there is insufficient time for complete evacuation, and places of higher elevation and/or taller structures could provide life safety. Community disaster resilience would also require that critical and essential facilities provide structural resistance to collapse. Towards that goal, the Tsunami Loads and Effects Subcommittee of the ASCE/Structural Engineering Institute (ASCE/SEI) 7 Standards Committee has developed a new Chapter 6 with design requirements for tsunami loads and effects, contained in the 2016 edition of the ASCE 7 standard Minimum Design Loads for Buildings and Other Structures [Minimum design loads for buildings and other structures]. The ASCE 7-16 ``Tsunami Loads and Effects'' chapter will become the first national, consensus-based standard for tsunami resilience for use in the states of Alaska, Washington, Oregon, California, and Hawaii. The purpose of this paper is to provide an explanation of the technical basis and methodology for tsunami-resilient design of critical and essential facilities, tsunami vertical evacuation refuge structures, and other multistory building structures. The ASCE 7 provisions for tsunami loads and effects implements a unified set of analysis and design methodologies with design maps based on probabilistic hazard analysis, loads based on tsunami physics, and a structural ultimate strength basis of design. Probabilistic offshore tsunami amplitude maps and tsunami design zone inundation maps were developed using a method consistent with probabilistic seismic hazard analysis in the treatment of seismic source uncertainties. Procedures for tsunami inundation analysis are based on using mapped values of offshore tsunami amplitude or the runup and inundation limit shown in tsunami design zone maps. The ASCE 7 ``Tsunami Loads and Effects'' chapter is consistent with the principles of probabilistic hazard analysis, tsunami physics, and fluid mechanics, integrated into a comprehensive set of design provisions. DOI: 10.1061/(ASCE)ST.1943-541X.0001565. {\copyright} 2016 American Society of Civil Engineers.},
-  langid = {english},
-  file = {C:\Users\noeko\Zotero\storage\9WHFA4YF\Chock - 2016 - Design for Tsunami Loads and Effects in the ASCE 7-16 Standard.pdf}
-}
-
-@article{luoPhysicsBuildingVulnerability2020,
-  title = {Physics of Building Vulnerability to Debris Flows, Floods and Earth Flows},
-  author = {Luo, H.Y. and Fan, R.L. and Wang, H.J. and Zhang, L.M.},
-  year = {2020},
-  month = jun,
-  journal = {Engineering Geology},
-  volume = {271},
-  pages = {105611},
-  issn = {00137952},
-  doi = {10.1016/j.enggeo.2020.105611},
-  urldate = {2025-02-06},
-  abstract = {Mass flows such as landslides and floods pose great risks to the built environment. In the literature the assessment of the building vulnerability to these different mass flows is evaluated separately and little effort has been made to investigate the interaction mechanisms between mass flows and buildings, leading to a lack of explicit failure mechanisms in many vulnerability models. In this study, the failure modes of a typical reinforced concrete building upon impact by debris flows, debris floods, floods and earth flows are discovered through an explicit finite element platform LS-DYNA. Five impact cases with increasing solid concentration; namely, lowintensity water flow, high-intensity water flow, debris flood, debris flow and earth flow, are considered. The intrinsic physics of building damage by these flow-like mass movements is compared. The frontal walls and side walls are vulnerable to any type of flow. A forward pushover failure mode, which is a global failure of the building frame, is observed in the high-intensity water flow and debris flood cases. Upon impact by an earth flow, progressive local failure of the columns at the ground floor can occur and lead to backward collapse of the building. Upon impact by a debris flow, both the local column failure and the global pushover collapse of building can occur, as debris flows with high solid contents are an intermediate flow sharing characteristics of both floods and earth flows. The in-depth study of the physics of building damage provides a solid basis to develop generic vulnerability models for such flow-like mass movements of varying solid contents.},
-  langid = {english},
-  file = {C:\Users\noeko\Zotero\storage\W32F2NHT\Luo et al. - 2020 - Physics of building vulnerability to debris flows, floods and earth flows.pdf}
-}
-
-@article{mascarenasExperimentalEvaluationLoads,
-  title = {Experimental {{Evaluation}} of {{Loads}} from {{Inundation-Driven Debris Fields}}},
-  author = {Mascarenas, Dakota},
-  langid = {english},
-  file = {C:\Users\noeko\Zotero\storage\XP5JGZLD\Mascarenas - Experimental Evaluation of Loads from Inundation-Driven Debris Fields.pdf}
-}
-
-@inproceedings{mascarenasQuantifyingUnderstandingStructural2022,
-  title = {Quantifying and {{Understanding Structural Loading}} from {{Wave-Driven Debris Fields}}},
-  booktitle = {Ports 2022},
-  author = {Mascarenas, Dakota and Motley, Michael R. and Eberhard, Marc O. and Arduino, Pedro and Serrone, Abbey},
-  year = {2022},
-  month = sep,
-  pages = {523--534},
-  publisher = {American Society of Civil Engineers},
-  address = {Honolulu, Hawaii},
-  doi = {10.1061/9780784484395.052},
-  urldate = {2025-02-06},
-  abstract = {During a tsunami or storm surge event, coastal infrastructure and ports are subject to a series of disparate physical hazards that can cause significant damage and loss of life. Among these, debris impact loading during inundation events is chaotic, complex, and thus far minimally understood, especially when considering the accumulation of individual debris into a large debris field. This work provides the results of a comprehensive experimental study of the impact and subsequent damming of chaotic debris fields, including more than 400 individual trials; this scope of this paper describes the experimental design and initial analysis of wave-driven debris-induced loading for select configurations. These data include both the impact phenomena and subsequent damming by debris accumulation and finds strong correlation between increasing debris field density and high impact forces. High frequency impact forces and low frequency damming signals are considered via Fast Fourier Transform methods. Overall trends in wave-induced debris forcing from large debris fields are presented.},
-  isbn = {978-0-7844-8439-5},
-  langid = {english},
-  file = {C:\Users\noeko\Zotero\storage\GXLTGKJ5\Mascarenas et al. - 2022 - Quantifying and Understanding Structural Loading from Wave-Driven Debris Fields.pdf}
-}
-
-@article{motleyTsunamiInducedForcesSkewed2016,
-  title = {Tsunami-{{Induced Forces}} on {{Skewed Bridges}}},
-  author = {Motley, Michael R. and Wong, Hin Kei and Qin, Xinsheng and Winter, Andrew O. and Eberhard, Marc O.},
-  year = {2016},
-  month = may,
-  journal = {Journal of Waterway, Port, Coastal, and Ocean Engineering},
-  volume = {142},
-  number = {3},
-  pages = {04015025},
-  issn = {0733-950X, 1943-5460},
-  doi = {10.1061/(ASCE)WW.1943-5460.0000328},
-  urldate = {2025-01-18},
-  abstract = {Research on the influence of tsunamis on bridges has been based almost exclusively on the results of field surveys and of twodimensional analysis. Although these analyses can provide estimates of forces and moments on the structure, they do not account for threedimensional (3D) phenomena, such as channelization, or geometric effects, such as bridge skew. Using a 3D computational fluid dynamics approach, this work analyzes the temporal and spatial dynamics of a bore-type tsunami loading on a model bridge and shows how the skew angle of the bridge relative to the incoming wave can affect the loading history. The analyses found that, unlike a bridge without skew, (1) the bore impact forces on the skewed deck do not all occur at the same time; (2) the skewed bridge is subjected to a force perpendicular to its abutments, which could lead to unseating; and (3) the skewed bridge is subjected to pitching and spinning moments. These effects combine to lead to increased horizontal reactions in the substructure components nearest the incoming wave. The vertical reactions were relatively insensitive to skew angle. DOI: 10.1061/(ASCE)WW.1943-5460.0000328. {\copyright} 2015 American Society of Civil Engineers.},
-  langid = {english},
-  file = {C:\Users\noeko\Zotero\storage\F74RC98Z\Motley et al. - 2016 - Tsunami-Induced Forces on Skewed Bridges.pdf}
-}
-
-@article{shekharConceptualEvaluationTsunami2020,
-  title = {Conceptual {{Evaluation}} of {{Tsunami Debris Field Damming}} and {{Impact Forces}}},
-  author = {Shekhar, Krishnendu and Winter, Andrew O. and Alam, Mohammad S. and Arduino, Pedro and Miller, Gregory R. and Motley, Michael R. and Eberhard, Marc O. and Barbosa, Andre R. and Lomonaco, Pedro and Cox, Daniel T.},
-  year = {2020},
-  month = nov,
-  journal = {Journal of Waterway, Port, Coastal, and Ocean Engineering},
-  volume = {146},
+@article{Aghl2017,
+  author = {Aghl, P. P. and Naito, C. J. and Riggs, H. R.},
+  title = {A simplified model for estimating axial impact forces resulting from debris with non-uniform nonstructural mass},
+  journal = {Adv. Struct. Eng.},
+  volume = {20},
   number = {6},
-  pages = {04020039},
-  issn = {0733-950X, 1943-5460},
-  doi = {10.1061/(ASCE)WW.1943-5460.0000600},
-  urldate = {2025-01-24},
-  abstract = {The damage caused by tsunamis to coastal communities is often not only the result of the flowing water itself, but also of transported debris. Although there have been efforts to characterize forces from single-debris impacts, a more general scenario of multiple-debris impacts has not been studied experimentally. To address this need, experimental studies were performed, considering the effect of debris orientation and the number of debris field components on peak impact and damming forces on coastal structures. These forces are evaluated both qualitatively and quantitatively to provide insight into the nature of these impacts. For a few selected cases, a number of trials were conducted and an initial statistical study of the debris field collision phenomena performed. Observed forces and results are presented in terms of normalized quantities using analytical equations commonly used to calculate impact or drag forces. The lessons from this work provide an initial data set that can be used to guide further experimental and numerical studies on debris-laden tsunami flows. DOI: 10.1061/(ASCE)WW.1943-5460.0000600. {\copyright} 2020 American Society of Civil Engineers.},
-  langid = {english},
-  file = {C:\Users\noeko\Zotero\storage\5KDWVLQL\Shekhar et al. - 2020 - Conceptual Evaluation of Tsunami Debris Field Damming and Impact Forces.pdf}
+  pages = {963--975},
+  year = {2017},
+  doi = {10.1177/1369433216668361}
 }
 
-@article{winterTsunamiLikeWaveLoading2018,
-  title = {Tsunami-{{Like Wave Loading}} of {{Individual Bridge Components}}},
-  author = {Winter, Andrew O. and Motley, Michael R. and Eberhard, Marc O.},
+@article{Akiyama2013,
+  author = {Akiyama, M. and Frangopol, D. M. and Arai, M. and Koshimura, S.},
+  title = {Reliability of bridges under tsunami hazards: Emphasis on the 2011 Tohoku earthquake},
+  journal = {Earthquake Spectra},
+  volume = {29},
+  number = {S1},
+  pages = {S295--S314},
+  year = {2013},
+  doi = {10.1193/1.4000112}
+}
+
+@article{Arduino2018,
+  author = {Arduino, P. and Motley, M. and Eberhard, M. and Cox, D. and Barbosa, A. and Lomonaco, P.},
+  title = {PRJ-1709: NHERI debris impact experiments},
   year = {2018},
-  month = feb,
-  journal = {Journal of Bridge Engineering},
-  volume = {23},
+  doi = {10.17603/DS2T09V}
+}
+
+@misc{ASCE2017,
+  author = {{ASCE}},
+  title = {Minimum design loads and associated criteria for buildings and other structures},
+  year = {2017},
+  note = {ASCE/SEI 7-16, Reston, VA}
+}
+
+@misc{BBC2011,
+  author = {{BBC}},
+  title = {Japan earthquake: Tsunami reaches US West Coast},
+  year = {2011},
+  note = {Accessed July 7, 2017, https://www.bbc.co.uk/news/world-us-canada-12714558}
+}
+
+@article{Chock2013,
+  author = {Chock, G.},
+  title = {ASCE/JSCE Tohoku tsunami investigation of structural damage and development of the ASCE 7 tsunami design code for buildings and other structures},
+  year = {2013},
+  note = {Tsukuba, Japan: Public Works Research Institute (PWRI)}
+}
+
+@article{Derschum2018,
+  author = {Derschum, C. and Nistor, I. and Stolle, J. and Goseberg, N.},
+  title = {Debris impact under extreme hydrodynamic conditions part 1: Hydrodynamics and impact geometry},
+  journal = {Coastal Eng.},
+  volume = {141},
+  pages = {24--35},
+  year = {2018},
+  doi = {10.1016/j.coastaleng.2018.08.016}
+}
+
+@article{Gschnitzer2017,
+  author = {Gschnitzer, T. and Gems, B. and Mazzorana, B. and Aufleger, M.},
+  title = {Towards a robust assessment of bridge clogging processes in flood risk management},
+  journal = {Geomorphology},
+  volume = {279},
+  pages = {128--140},
+  year = {2017},
+  doi = {10.1016/j.geomorph.2016.11.002}
+}
+
+@article{Haehnel2004,
+  author = {Haehnel, R. and Daly, S.},
+  title = {Maximum impact force of woody debris on floodplain structures},
+  journal = {J. Hydraul. Eng.},
+  volume = {130},
   number = {2},
-  pages = {04017137},
-  issn = {1084-0702, 1943-5592},
-  doi = {10.1061/(ASCE)BE.1943-5592.0001177},
-  urldate = {2025-01-18},
-  abstract = {Research concerning tsunami forces on bridges has focused primarily on determining total forces either experimentally or numerically, often with the goal of establishing total force demand equations. However, this approach does not provide an understanding of which bridge components contribute to the total force demands as well as the individual component demands. Using a two-dimensional (2D) computational fluid dynamics approach, the influence of individual bridge components on total bridge forces was assessed in detail to show how this approach can provide critical information for designers, and was applied for bridges with varying superelevation and girder spacing as a proofof-concept example to illustrate the benefits of this approach in understanding tsunami-like wave impacts on structures with complex geometries. The analyses resulted in the following findings. First, the upstream face of the upstream girder along with the traffic barriers carried the majority of the total horizontal impact load, which remained approximately constant while both the superelevation angle and girder spacing varied. Second, the opposing girder faces between pairs of girders experienced horizontal impact loading due to the compressed fluids between them. These loads were comparable in magnitude to the maximum horizontal impact load; however, these opposing girder forces canceled each other out, with this effect diminishing for increasing girder spacing. Despite its lack of influence on the overall demand, such behavior dictates the local design requirements of bridge girders to resist bore-induced forces. Third, the top deck face as well as the upstream and middle bottom deck faces sustained the majority of the vertical impact loading. As the superelevation angle was increased, a decrease in the total vertical load was observed, whereas when the girder spacing was decreased, an increase in the total vertical load occurred. Fourth, the upstream face of the upstream girder, traffic barriers, and top deck face carried the bulk of the total horizontal postimpact load, which varied parabolically with superelevation independent of the girder spacing. Finally, the deck primarily resisted the vertical postimpact load, which decreased linearly with an increase in superelevation angle, decreasing in magnitude for increased girder spacing. DOI: 10.1061/(ASCE) BE.1943-5592.0001177. {\copyright} 2017 American Society of Civil Engineers.},
-  langid = {english},
-  file = {C:\Users\noeko\Zotero\storage\8ITJLQ9H\Winter et al. - 2018 - Tsunami-Like Wave Loading of Individual Bridge Components.pdf}
+  pages = {112--120},
+  year = {2004},
+  doi = {10.1061/(ASCE)0733-9429(2004)130:2(112)}
+}
+
+@article{Ko2015,
+  author = {Ko, H. T.-S. and Cox, D. T. and Riggs, H. R. and Naito, C. J.},
+  title = {Hydraulic experiments on impact forces from tsunami-driven debris},
+  journal = {J. Waterway, Port, Coastal, Ocean Eng.},
+  volume = {141},
+  number = {3},
+  pages = {04014043},
+  year = {2015},
+  doi = {10.1061/(ASCE)WW.1943-5460.0000286}
+}
+
+@article{Kobayashi2012,
+  author = {Kobayashi, M. H. and Genest, R. and Riggs, H. R. and Paczkowski, K.},
+  title = {Simple hydroelastic impact models for water-borne debris},
+  journal = {Proc. Inst. Mech. Eng. M: J. Eng. Marit. Environ.},
+  volume = {226},
+  number = {2},
+  pages = {170--179},
+  year = {2012}
+}
+
+@article{Lebreton2013,
+  author = {Lebreton, L. C.-M. and Borrero, J. C.},
+  title = {Modeling the transport and accumulation of floating debris generated by the 11 March 2011 Tohoku tsunami},
+  journal = {Mar. Pollut. Bull.},
+  volume = {66},
+  number = {1},
+  pages = {53--58},
+  year = {2013},
+  doi = {10.1016/j.marpolbul.2012.11.013}
+}
+
+@article{Leonard2011,
+  author = {Leonard, G. and Evans, N. and Prasetya, G. and Saunders, W. and Pearse, L. and Monastra, D. and Fraser, S.},
+  title = {Scoping study for evaluating the tsunami vulnerability of New Zealand buildings for use as evacuation structures},
+  journal = {GNS Science Tech. Rep. 2011/36},
+  year = {2011}
+}
+
+@article{Madurapperuma2012,
+  author = {Madurapperuma, M. A. K. and Mijeyewickrema, A. C.},
+  title = {Inelastic dynamic analysis of an RC building impacted by a tsunami water-borne shipping container},
+  journal = {J. Earthquake Tsunami},
+  volume = {6},
+  number = {1},
+  pages = {1250001},
+  year = {2012},
+  doi = {10.1142/S1793431112500017}
+}
+
+@article{McCullough2013,
+  author = {McCullough, M. and Kareem, A. and Donahue, A. and Westerink, J.},
+  title = {Structural damage under multiple hazards in coastal environments},
+  journal = {J. Disaster Res.},
+  volume = {8},
+  number = {6},
+  pages = {1042--1051},
+  year = {2013},
+  doi = {10.20965/jdr.2013.p1042}
+}
+
+@article{Naito2014,
+  author = {Naito, C. and Cercone, C. and Riggs, H. R. and Cox, D.},
+  title = {Procedure for site assessment of the potential for tsunami debris impact},
+  journal = {J. Waterway, Port, Coastal, Ocean Eng.},
+  volume = {140},
+  number = {2},
+  pages = {223--232},
+  year = {2014},
+  doi = {10.1061/(ASCE)WW.1943-5460.0000222}
+}
+
+@article{Naito2016,
+  author = {Naito, C. and Riggs, H. R. and Wei, Y. and Cercone, C.},
+  title = {Shipping-container impact assessment for tsunamis},
+  journal = {J. Waterway, Port, Coastal, Ocean Eng.},
+  volume = {142},
+  number = {5},
+  pages = {05016003},
+  year = {2016},
+  doi = {10.1061/(ASCE)WW.1943-5460.0000348}
+}
+
+@misc{Nakaso2011,
+  author = {Nakaso, D.},
+  title = {Tsunami damage estimate for Hawaii now tens of millions},
+  year = {2011},
+  note = {Star Advertizer, March 14, 2011}
+}
+
+@misc{NPR2011,
+  author = {{NPR}},
+  title = {Tsunami waves hit west coast, Hawaii},
+  year = {2011},
+  note = {Accessed July 7, 2017, https://www.npr.org/2011/03/11/134446769/tsunami-warning-wides-to-include-hawaii?t=1593094452415}
+}
+
+@article{Paczkowski2012,
+  author = {Paczkowski, K. and Riggs, H. R. and Naito, C. and Lehmann, A.},
+  title = {A one dimensional model for impact forces resulting from high mass, low velocity debris},
+  journal = {Struct. Eng. Struct. Mech.},
+  volume = {42},
+  number = {6},
+  pages = {831--847},
+  year = {2012},
+  doi = {10.12989/sem.2012.42.6.831}
+}
+
+@article{Rueben2015,
+  author = {Rueben, M. and Cox, D. and Holman, R. and Shin, S. and Stanley, J.},
+  title = {Optical measurements of tsunami inundation and debris movement in a large-scale wave basin},
+  journal = {J. Waterway, Port, Coastal, Ocean Eng.},
+  volume = {141},
+  number = {1},
+  pages = {4010--4029},
+  year = {2015}
+}
+
+@article{Schmocker2011,
+  author = {Schmocker, L. and Hager, W. H.},
+  title = {Probability of drift blockage at bridge decks},
+  journal = {J. Hydraul. Eng.},
+  volume = {137},
+  number = {4},
+  pages = {470--479},
+  year = {2011},
+  doi = {10.1061/(ASCE)HY.1943-7900.0000319}
+}
+
+@article{Shafiei2016,
+  author = {Shafiei, S. and Melville, B. W. and Shamseldin, A. Y. and Beskhyroun, S. and Adams, K. N.},
+  title = {Measurements of tsunami-borne debris impact on structures using an embedded accelerometer},
+  journal = {J. Hydraul. Res.},
+  volume = {54},
+  number = {4},
+  pages = {435--449},
+  year = {2016},
+  doi = {10.1080/00221686.2016.1170071}
+}
+
+@article{Shekhar2020,
+  author = {Shekhar, K. and Alam, M. S. and Winter, A. O. and Galant, G. and Barbosa, A. and Motley, M. and Eberhard, M. and Cox, D.},
+  title = {Experimental and numerical insights on tsunami-like wave forces on coastal structures},
+  journal = {J. Waterway, Port, Coastal, Ocean Eng.},
+  volume = {146},
+  number = {4},
+  pages = {04020021},
+  year = {2020},
+  doi = {10.1061/(ASCE)WW.1943-5460.0000581}
+}
+
+@article{Stolle2018,
+  author = {Stolle, J. and Derschum, C. and Goseberg, N. and Nistor, I. and Petriu, E.},
+  title = {Debris impact under extreme hydrodynamic conditions part 2: Impact force responses for non-rigid debris collisions},
+  journal = {Coastal Eng.},
+  volume = {141},
+  pages = {107--118},
+  year = {2018},
+  doi = {10.1016/j.coastaleng.2018.09.004}
+}
+
+@article{Stolle2019,
+  author = {Stolle, J. and Goseberg, N. and Nistor, I. and Petriu, E.},
+  title = {Debris impact forces on flexible structures in extreme hydrodynamic conditions},
+  journal = {J. Fluids Struct.},
+  volume = {84},
+  pages = {391--407},
+  year = {2019},
+  doi = {10.1016/j.jfluidstructs.2018.11.009}
+}
+
+@article{Suppasri2013,
+  author = {Suppasri, A. and Mas, E. and Charvet, I. and Gunasekera, R. and Imai, K. and Fukutani, Y. and Abe, Y. and Imamura, F.},
+  title = {Building damage characteristics based on surveyed data and fragility curves of the 2011 Great East Japan tsunami},
+  journal = {Nat. Hazard.},
+  volume = {66},
+  number = {2},
+  pages = {319--341},
+  year = {2013},
+  doi = {10.1007/s11069-012-0487-8}
+}
+
+@article{Yao2014,
+  author = {Yao, Y. and Huang, Z. and Lo, E. Y. M. and Shen, H.-T.},
+  title = {A preliminary laboratory study of motion of floating debris generated by solitary waves running up a beach},
+  journal = {J. Earthquake Tsunami},
+  volume = {8},
+  number = {3},
+  pages = {1440006},
+  year = {2014},
+  doi = {10.1142/S1793431114400065}
+}
+
+@article{Tomita2011,
+  author = {Tomita, T. and Honda, K.},
+  title = {Practical model to estimate drift motion of vessels by tsunami},
+  journal = {Coastal Eng. Proc.},
+  volume = {1},
+  number = {32},
+  pages = {27},
+  year = {2011},
+  doi = {10.9753/icce.v32.management.27}
+}
+
+@inproceedings{Bonus2022,
+  author = {Bonus, J. and Arduino, P. and Motley, M. and Eberhard, M.},
+  title = {Multi-Scale Numerical Simulation of Tsunami-Driven Debris-Field Impacts},
+  booktitle = {Ports 2022},
+  pages = {328--339},
+  year = {2022},
+  doi = {10.1061/9780784484395.033}
+}
+
+@inproceedings{Mascarenas2022,
+  author = {Mascarenas, D. and Motley, M. R. and Eberhard, M. O. and Arduino, P. and Serrone, A.},
+  title = {Quantifying and Understanding Structural Loading from Wave-Driven Debris Fields},
+  booktitle = {Ports 2022},
+  pages = {523--534},
+  year = {2022},
+  doi = {10.1061/9780784484395.052}
+}
+
+@article{Doyle2024,
+  author = {Doyle, M. and Lomonaco, P. et al.},
+  title = {Large-scale flume tests of tsunami-driven debris impacts on slender columns},
+  journal = {J. Waterway, Port, Coastal, Ocean Eng.},
+  year = {2024}
 }
